<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_text"
            android:gravity="center_horizontal"
            android:paddingTop="8dp"
            android:textSize="36sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:paddingTop="24dp"
            android:paddingLeft="8dp"
            android:textSize="16sp"
            />

        <RadioGroup
            android:id="@+id/radio_group1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >
            <RadioButton
                android:id="@+id/answer1_opt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="8dp"
                android:text="@string/q1_yes"

                />
            <RadioButton
                android:id="@+id/answer1_opt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingLeft="8dp"
                android:text="@string/q1_no"
                />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question2"
            android:paddingTop="20dp"
            android:paddingLeft="8dp"
            android:textSize="16sp"
            />
        <EditText
            android:id="@+id/answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:hint="@string/q2_edit_hint"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question3"
            android:paddingTop="24dp"
            android:paddingLeft="8dp"
            android:textSize="16sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/answer3_chck1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_checkbox1"
                android:paddingLeft="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                />
            <CheckBox
                android:id="@+id/answer3_chck2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_checkbox2"
                android:paddingLeft="8dp"
                android:layout_marginRight="16dp"
                />
            <CheckBox
                android:id="@+id/answer3_chck3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_checkbox3"
                android:paddingLeft="8dp"
                android:layout_marginRight="16dp"
                />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4"
            android:paddingTop="24dp"
            android:paddingLeft="8dp"
            android:textSize="16sp"
            />

            <RadioGroup
                android:id="@+id/radio_group2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/answer4_opt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/q1_yes"
                    />
                <RadioButton
                    android:id="@+id/answer4_opt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/q1_no"
                    />
            </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question5"
            android:paddingTop="24dp"
            android:paddingLeft="8dp"
            android:textSize="16sp"
            />
        <EditText
            android:id="@+id/answer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/q5_edit_hint"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question6"
            android:paddingTop="24dp"
            android:paddingLeft="8dp"
            android:textSize="16sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/answer6_chck1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6_checkbox1"
                android:paddingLeft="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                />
            <CheckBox
                android:id="@+id/answer6_chck2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6_checkbox2"
                android:paddingLeft="8dp"
                android:layout_marginRight="16dp"
                />
            <CheckBox
                android:id="@+id/answer6_chck3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6_checkbox3"
                android:paddingLeft="8dp"
                android:layout_marginRight="16dp"
                />

        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_answer"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:padding="16dp"
            android:onClick="sendAnswer"
            />

    </LinearLayout>

</ScrollView>
